# CODSOFT_Susovan_Image_Processing_Tool

./: .gitignore  .gitignore.txt  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  README.md.txt  imageview.cpp  imageview.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
